[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://connector/connector.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 103.188

[sub_resource type="CircleShape2D" id=2]

[node name="Connector" type="Node2D"]
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( -2.5411e-21, -3.05176e-05 )
scale = Vector2( 0.455635, 0.455635 )
texture = ExtResource( 1 )

[node name="Ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 200 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="DetectBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectBox"]
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="End" type="Position2D" parent="."]
position = Vector2( 0, 203.014 )

[node name="Line" type="Line2D" parent="."]
[connection signal="area_entered" from="DetectBox" to="." method="_on_DetectBox_area_entered"]
[connection signal="area_exited" from="DetectBox" to="." method="_on_DetectBox_area_exited"]
